service GameServer {
    rpc GetGame (GetGameRequest) returns (GetGameResponse);
}

message GetGameRequest {

}
message GetGameResponse {
}